src/bundle/Resources/public/css/themes/default/style.css
/* jsTree default theme */
#treemenu-sidebar-widget {
  overflow: auto;
  font-size: 0.9375rem;
  white-space: nowrap;
}
#treemenu-sidebar-widget .ez-extra-actions-left__header {
  font-weight: 700;
  font-size: 1rem;
}
#treemenu-sidebar-widget ul {
  -webkit-padding-start: 0;
  -moz-padding-start: 0;
}
#treemenu-sidebar-widget .jstree-node,
#treemenu-sidebar-widget .jstree-children,
#treemenu-sidebar-widget .jstree-container-ul {
  display: block;
  margin: 0;
  /*padding: 0.2rem 0;*/
  list-style-type: none;
  list-style-image: none;
}
#treemenu-sidebar-widget .jstree-node {
  white-space: nowrap;
}
#treemenu-sidebar-widget .jstree-anchor {
  display: inline-block;
  color: black;
  padding: 0 4px 0 1px;
  margin: 0;
  vertical-align: top;
}
#treemenu-sidebar-widget .jstree-anchor:focus {
  outline: 0;
}
#treemenu-sidebar-widget .jstree-anchor,
#treemenu-sidebar-widget .jstree-anchor:link,
#treemenu-sidebar-widget .jstree-anchor:visited,
#treemenu-sidebar-widget .jstree-anchor:hover,
#treemenu-sidebar-widget .jstree-anchor:active {
  text-decoration: none;
  color: #000;
}
#treemenu-sidebar-widget .jstree-icon {
  display: inline-block;
  text-decoration: none;
  margin: 0;
  padding: 0;
  vertical-align: top;
  text-align: center;
}
#treemenu-sidebar-widget .jstree-icon:empty {
  display: inline-block;
  text-decoration: none;
  margin: 0;
  padding: 0;
  vertical-align: top;
  text-align: center;
}
#treemenu-sidebar-widget .jstree-ocl {
  cursor: pointer;
}
#treemenu-sidebar-widget .jstree-leaf > .jstree-ocl {
  cursor: default;
}
#treemenu-sidebar-widget .jstree .jstree-open > .jstree-children {
  display: block;
}
#treemenu-sidebar-widget .jstree .jstree-closed > .jstree-children,
#treemenu-sidebar-widget .jstree .jstree-leaf > .jstree-children {
  display: none;
}
.jstree-anchor > .jstree-themeicon {
  margin-right: 2px;
}
#treemenu-sidebar-widget .jstree-no-icons .jstree-themeicon,
#treemenu-sidebar-widget .jstree-anchor > .jstree-themeicon-hidden {
  display: none;
}
#treemenu-sidebar-widget .jstree-hidden,
#treemenu-sidebar-widget .jstree-node.jstree-hidden {
  display: none;
}
#treemenu-sidebar-widget .jstree-rtl .jstree-anchor {
  padding: 0 1px 0 4px;
}
#treemenu-sidebar-widget .jstree-rtl .jstree-anchor > .jstree-themeicon {
  margin-left: 2px;
  margin-right: 0;
}
#treemenu-sidebar-widget .jstree-rtl .jstree-node {
  margin-left: 0;
}
#treemenu-sidebar-widget .jstree-rtl .jstree-container-ul > .jstree-node {
  margin-right: 0;
}
#treemenu-sidebar-widget .jstree-wholerow-ul {
  position: relative;
  display: inline-block;
  min-width: 100%;
}
#treemenu-sidebar-widget .jstree-wholerow-ul .jstree-leaf > .jstree-ocl {
  cursor: pointer;
}
#treemenu-sidebar-widget .jstree-wholerow-ul .jstree-anchor,
#treemenu-sidebar-widget .jstree-wholerow-ul .jstree-icon {
  position: relative;
}
#treemenu-sidebar-widget .jstree-wholerow-ul .jstree-wholerow {
  width: 100%;
  cursor: pointer;
  position: absolute;
  left: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}
#treemenu-sidebar-widget .jstree-contextmenu .jstree-anchor {
  -webkit-user-select: none;
  /* disable selection/Copy of UIWebView */
  -webkit-touch-callout: none;
  /* disable the IOS popup when long-press on a link */
}
#treemenu-sidebar-widget .vakata-context {
  display: none;
}
#treemenu-sidebar-widget .vakata-context,
#treemenu-sidebar-widget .vakata-context ul {
  margin: 0;
  padding: 2px;
  position: absolute;
  background: #f5f5f5;
  border: 1px solid #979797;
  box-shadow: 2px 2px 2px #999999;
}
#treemenu-sidebar-widget .vakata-context ul {
  list-style: none;
  left: 100%;
  margin-top: -2.7em;
  margin-left: -4px;
}
#treemenu-sidebar-widget .vakata-context .vakata-context-right ul {
  left: auto;
  right: 100%;
  margin-left: auto;
  margin-right: -4px;
}
#treemenu-sidebar-widget .vakata-context li {
  list-style: none;
}
#treemenu-sidebar-widget .vakata-context li > a {
  display: block;
  padding: 0 2em 0 2em;
  text-decoration: none;
  width: auto;
  color: black;
  white-space: nowrap;
  line-height: 2.4em;
  text-shadow: 1px 1px 0 white;
  border-radius: 1px;
}
#treemenu-sidebar-widget .vakata-context li > a:hover {
  position: relative;
  background-color: transparent;
  /*box-shadow: 0 0 2px #0a6aa1;*/
}
#treemenu-sidebar-widget .vakata-context li > a.vakata-context-parent {
  background-image: url("data:image/gif;base64,R0lGODlhCwAHAIAAACgoKP///yH5BAEAAAEALAAAAAALAAcAAAIORI4JlrqN1oMSnmmZDQUAOw==");
  background-position: right center;
  background-repeat: no-repeat;
}
#treemenu-sidebar-widget .vakata-context li > a:focus {
  outline: 0;
}
#treemenu-sidebar-widget .vakata-context .vakata-context-hover > a {
  position: relative;
  background-color: transparent;
  box-shadow: transparent;
}
#treemenu-sidebar-widget .vakata-context .vakata-context-separator > a,
#treemenu-sidebar-widget .vakata-context .vakata-context-separator > a:hover {
  background: transparent;
  border: 0;
  border-top: 1px solid #e2e3e3;
  height: 1px;
  min-height: 1px;
  max-height: 1px;
  padding: 0;
  margin: 0 0 0 2.4em;
  border-left: 1px solid #e0e0e0;
  text-shadow: 0 0 0 transparent;
  box-shadow: 0 0 0 transparent;
  border-radius: 0;
}
#treemenu-sidebar-widget .vakata-context .vakata-contextmenu-disabled a,
#treemenu-sidebar-widget .vakata-context .vakata-contextmenu-disabled a:hover {
  color: silver;
  background-color: transparent;
  border: 0;
  box-shadow: 0 0 0;
}
#treemenu-sidebar-widget .vakata-context li > a > i {
  text-decoration: none;
  display: inline-block;
  width: 2.4em;
  height: 2.4em;
  background: transparent;
  margin: 0 0 0 -2em;
  vertical-align: top;
  text-align: center;
  line-height: 2.4em;
}
#treemenu-sidebar-widget .vakata-context li > a > i:empty {
  width: 2.4em;
  line-height: 2.4em;
}
/* ... */

